--- a/index.html
+++ b/index.html
@@ -19,22 +19,21 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Person1.html">Elon Musk</a>
+                <a class="nav-link" href="Python1.html">Basics of Python</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Person2.html">Sun Tzu</a>
+                <a class="nav-link"  href="Python2.html">What does python do!!!</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Person3.html">Keith Urban</a>
-                <li class="nav-item">
-                    <a class="nav-link" href="Person4.html">John Mayer</a>
-              </li>
+                <a class="nav-link" href="Python3.html">How to use the print command!!!</a>
+               
             </ul>
           </div>
         </div>
       </nav>
+     <p> Python has different syntax depending on what you do!!!</p>
 </body>
 </html>
