--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home|Joshua Noronha, Project1</title>
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="project1_style.css">
+    <link rel="stylesheet" href="python.css">
 </head>
 <body>
     <header><h1> Influential People</h1></header>
